--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
           </div>
           <div class="info_box">
             <h2 class="slowgun">
-              새로운 기술과 더 나은 경험을 고민하며,<br>
-              결과로 성장과 가치를 증명할 수 있는 개발자가 되겠습니다.
+              "새로운 기술과 더 나은 경험을 고민하며,<br>
+              결과로 성장과 가치를 증명할 수 있는 개발자가 되겠습니다."
             </h2>
             <div class="info_item">
               <span class="info_label">이름</span>
@@ -728,7 +728,7 @@
               </li>
               <li class="info_item">
                 <h3 class="info_title email">이메일</h3>
-                <p class="info_text"><a href="#">kyt910830@gmail.com</a></p>
+                <p class="info_text"><a href="mailto:kyt910830@gmail.com">kyt910830@gmail.com</a></p>
               </li>
               <li class="info_item">
                 <h3 class="info_title phone">연락처</h3>
