feat 파피콘 추가

--- a/index.html
+++ b/index.html
@@ -5,6 +5,13 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>김영태 | 프론트엔드 개발자</title>
+  <!-- 파비콘 -->
+  <!-- favicon pc용 / .ico 확장자 -->
+  <link rel="shortcut icon" href="images/favicon.ico">
+  <!-- favicon 안드로이드 / .png 확장자 -->
+  <link rel="shortcut icon" href="images/favicon_logo.png">
+  <!-- favicon 애플ios / .jpg 확장자 -->
+  <link rel="shortcut icon" href="images/favicon_logo.jpg">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reset-css@5.0.1/reset.min.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -138,7 +145,8 @@
                   <div class="project_links">
                     <a href="https://campick-project.vercel.app/" target="_blank" class="link_site">Go To Site</a>
 
-                    <a href="https://www.figma.com/deck/o8MKfkv80NdocmCboAfsKu/3%EC%B0%A8-%EC%BA%A0%ED%94%BD-PPT?node-id=2-2118&t=pbpgdv7genVz8NM1-1" target="_blank" class="link_ppt">
+                    <a href="https://www.figma.com/deck/o8MKfkv80NdocmCboAfsKu/3%EC%B0%A8-%EC%BA%A0%ED%94%BD-PPT?node-id=2-2118&t=pbpgdv7genVz8NM1-1"
+                      target="_blank" class="link_ppt">
                       <img src="images/ppt_mini.png" alt="파워포인트">
                     </a>
 
@@ -215,7 +223,8 @@
                   <div class="project_links">
                     <a href="http://kytkyt910830.dothome.co.kr/cgv/" target="_blank" class="link_site">Go To Site</a>
 
-                    <a href="https://www.figma.com/deck/fW4DByiNGLEvzvNIbLSPP1/2%EC%B0%A8-CGV-%EB%A6%AC%EB%89%B4%EC%96%BC-PPT?node-id=1-1010&t=PqEHqMzCyMpANqGj-1" target="_blank" class="link_ppt">
+                    <a href="https://www.figma.com/deck/fW4DByiNGLEvzvNIbLSPP1/2%EC%B0%A8-CGV-%EB%A6%AC%EB%89%B4%EC%96%BC-PPT?node-id=1-1010&t=PqEHqMzCyMpANqGj-1"
+                      target="_blank" class="link_ppt">
                       <img src="images/ppt_mini.png" alt="파워포인트">
                     </a>
 
@@ -287,7 +296,8 @@
                   <div class="project_links">
                     <a href="https://kyt0830.github.io/project01/" target="_blank" class="link_site">Go To Site</a>
 
-                    <a href="https://www.figma.com/deck/dsNqJRiqx2yZj6nN1fsHGp/1%EC%B0%A8-%EB%A1%9C%EB%A0%88%EC%95%8C-%EB%A6%AC%EB%89%B4%EC%96%BC-PPT?node-id=1-101&t=zXGGkgGJqIg6ul1K-1" target="_blank" class="link_ppt">
+                    <a href="https://www.figma.com/deck/dsNqJRiqx2yZj6nN1fsHGp/1%EC%B0%A8-%EB%A1%9C%EB%A0%88%EC%95%8C-%EB%A6%AC%EB%89%B4%EC%96%BC-PPT?node-id=1-101&t=zXGGkgGJqIg6ul1K-1"
+                      target="_blank" class="link_ppt">
                       <img src="images/ppt_mini.png" alt="파워포인트">
                     </a>
 
@@ -429,7 +439,8 @@
                   <div class="project_links">
                     <a href="https://kyt0830.github.io/portfolio/" target="_blank" class="link_site">Go To Site</a>
 
-                    <a href="https://www.figma.com/deck/021DVnMrjNtcWWdcsACTgp/1%EC%B0%A8-%EC%9B%B9-%ED%8D%BC%EB%B8%94%EB%A6%AC%EC%85%94-%EB%B0%9C%ED%91%9C%ED%9A%8C?node-id=0-20&t=HLtfq0EReE41wyl6-1" target="_blank" class="link_ppt">
+                    <a href="https://www.figma.com/deck/021DVnMrjNtcWWdcsACTgp/1%EC%B0%A8-%EC%9B%B9-%ED%8D%BC%EB%B8%94%EB%A6%AC%EC%85%94-%EB%B0%9C%ED%91%9C%ED%9A%8C?node-id=0-20&t=HLtfq0EReE41wyl6-1"
+                      target="_blank" class="link_ppt">
                       <img src="images/ppt_mini.png" alt="파워포인트">
                     </a>
 
