feat TMI 추가 및 alt값 추가

--- a/index.html
+++ b/index.html
@@ -476,13 +476,13 @@
             <h3 class="item_title">디자인</h3>
             <div class="item_list">
               <div class="icon_box">
-                <img src="images/figma.png" alt="">
+                <img src="images/figma.png" alt="피그마">
               </div>
               <span class="list_title">Figma</span>
             </div>
             <div class="item_list">
               <div class="icon_box">
-                <img src="images/photoshop.png" alt="">
+                <img src="images/photoshop.png" alt="포토샵">
               </div>
               <span class="list_title">Photoshop</span>
             </div>
@@ -493,37 +493,37 @@
             <h3 class="item_title">퍼블리싱</h3>
             <div class="item_list">
               <div class="icon_box">
-                <img src="images/html5.png" alt="">
+                <img src="images/html5.png" alt="HTML5">
               </div>
               <span class="list_title">HTML5</span>
             </div>
             <div class="item_list">
               <div class="icon_box">
-                <img src="images/css.png" alt="">
+                <img src="images/css.png" alt="CSS3">
               </div>
               <span class="list_title">CSS3</span>
             </div>
             <div class="item_list">
               <div class="icon_box">
-                <img src="images/java.png" alt="">
+                <img src="images/java.png" alt="Javascript">
               </div>
               <span class="list_title">Javascript</span>
             </div>
             <div class="item_list">
               <div class="icon_box">
-                <img src="images/jquery.png" alt="">
+                <img src="images/jquery.png" alt="jQuery">
               </div>
               <span class="list_title">jQuery</span>
             </div>
             <div class="item_list">
               <div class="icon_box">
-                <img src="images/wordpress.png" alt="">
+                <img src="images/wordpress.png" alt="WordPress">
               </div>
               <span class="list_title">WordPress</span>
             </div>
             <div class="item_list">
               <div class="icon_box">
-                <img src="images/gunboard5.png" alt="">
+                <img src="images/gunboard5.png" alt="Gunboard5">
               </div>
               <span class="list_title">Gunboard5</span>
             </div>
@@ -534,43 +534,43 @@
             <h3 class="item_title">프론트 & 백</h3>
             <div class="item_list">
               <div class="icon_box">
-                <img src="images/react.png" alt="">
+                <img src="images/react.png" alt="React">
               </div>
               <span class="list_title">React</span>
             </div>
             <div class="item_list">
               <div class="icon_box">
-                <img src="images/nextjs.png" alt="">
+                <img src="images/nextjs.png" alt="Next.js">
               </div>
               <span class="list_title">Next.js</span>
             </div>
             <div class="item_list">
               <div class="icon_box">
-                <img src="images/vuejs.png" alt="">
+                <img src="images/vuejs.png" alt="Vue.js">
               </div>
               <span class="list_title">Vue.js</span>
             </div>
             <div class="item_list">
               <div class="icon_box">
-                <img src="images/php.png" alt="">
+                <img src="images/php.png" alt="PHP">
               </div>
               <span class="list_title">PHP</span>
             </div>
             <div class="item_list">
               <div class="icon_box">
-                <img src="images/mysql.png" alt="">
+                <img src="images/mysql.png" alt="MySQL">
               </div>
               <span class="list_title">MySQL</span>
             </div>
             <div class="item_list">
               <div class="icon_box">
-                <img src="images/supabase.png" alt="">
+                <img src="images/supabase.png" alt="Supabase">
               </div>
               <span class="list_title">Supabase</span>
             </div>
             <div class="item_list">
               <div class="icon_box">
-                <img src="images/firebase.png" alt="">
+                <img src="images/firebase.png" alt="Firebase">
               </div>
               <span class="list_title">Firebase</span>
             </div>
@@ -581,37 +581,37 @@
             <h3 class="item_title">그 외</h3>
             <div class="item_list">
               <div class="icon_box">
-                <img src="images/bootstrap.png" alt="">
+                <img src="images/bootstrap.png" alt="bootstrap">
               </div>
               <span class="list_title">Bootstrap</span>
             </div>
             <div class="item_list">
               <div class="icon_box">
-                <img src="images/tailwind.png" alt="">
+                <img src="images/tailwind.png" alt="tailwind">
               </div>
               <span class="list_title">Tailwind CSS</span>
             </div>
             <div class="item_list">
               <div class="icon_box">
-                <img src="images/notion.png" alt="">
+                <img src="images/notion.png" alt="notion">
               </div>
               <span class="list_title">Notion</span>
             </div>
             <div class="item_list">
               <div class="icon_box">
-                <img src="images/git.png" alt="">
+                <img src="images/git.png" alt="git">
               </div>
               <span class="list_title">Git</span>
             </div>
             <div class="item_list">
               <div class="icon_box">
-                <img src="images/vercel.png" alt="">
+                <img src="images/vercel.png" alt="vercel">
               </div>
               <span class="list_title">Vercel</span>
             </div>
             <div class="item_list">
               <div class="icon_box">
-                <img src="images/chatGPT.png" alt="">
+                <img src="images/chatGPT.png" alt="chatGPT">
               </div>
               <span class="list_title">ChatGPT</span>
             </div>
@@ -630,7 +630,7 @@
             <li class="item">
               <!-- img -->
               <div class="item_icon_box">
-                <img src="images/jlpt.png" alt="">
+                <img src="images/jlpt.png" alt="일본어 자격증">
               </div>
               <!-- text -->
               <div class="item_text_box">
@@ -643,7 +643,7 @@
             <li class="item">
               <!-- img -->
               <div class="item_icon_box">
-                <img src="images/sql.png" alt="">
+                <img src="images/sql.png" alt="sql자격증">
               </div>
               <!-- text -->
               <div class="item_text_box">
@@ -656,7 +656,7 @@
             <li class="item">
               <!-- img -->
               <div class="item_icon_box">
-                <img src="images/excel.png" alt="">
+                <img src="images/excel.png" alt="컴활">
               </div>
               <!-- text -->
               <div class="item_text_box">
@@ -669,7 +669,7 @@
             <li class="item">
               <!-- img -->
               <div class="item_icon_box">
-                <img src="images/react_big.png" alt="">
+                <img src="images/react_big.png" alt="리액트">
               </div>
               <!-- text -->
               <div class="item_text_box">
@@ -688,7 +688,7 @@
             <li class="item">
               <!-- img -->
               <div class="item_icon_box">
-                <img src="images/gardening.png" alt="">
+                <img src="images/gardening.png" alt="가드닝">
               </div>
               <!-- text -->
               <div>
@@ -700,7 +700,7 @@
             <li class="item">
               <!-- img -->
               <div class="item_icon_box">
-                <img src="images/health.png" alt="">
+                <img src="images/health.png" alt="헬스">
               </div>
               <!-- text -->
               <div>
@@ -712,12 +712,24 @@
             <li class="item">
               <!-- img -->
               <div class="item_icon_box">
-                <img src="images/music.png" alt="">
+                <img src="images/music.png" alt="음악감상">
               </div>
               <!-- text -->
               <div>
                 <h3 class="card_item_title">음악 감상</h3>
                 <p class="card_item_text">최근 재즈를 즐겨 듣고 있어요</p>
+              </div>
+            </li>
+            <!-- item4 -->
+            <li class="item">
+              <!-- img -->
+              <div class="item_icon_box">
+                <img src="images/memo.png" alt="메모">
+              </div>
+              <!-- text -->
+              <div>
+                <h3 class="card_item_title">메모와 기획</h3>
+                <p class="card_item_text">문득 떠오르는 아이디어를 메모하고 기획해요</p>
               </div>
             </li>
           </ul>
