script 속성값 변경

--- a/index.html
+++ b/index.html
@@ -836,7 +836,7 @@
   <!-- Smooth Scroll -->
   <script>
     const headerHeight = document.querySelector(".header").offsetHeight;
-
+    const offsetAdjust = 0;
     document.querySelectorAll('.menu').forEach(anchor => {
       anchor.addEventListener("click", function (e) {
         e.preventDefault();
